--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
             <div class="container">
                 <h2 class="section-title" data-aos="fade-up">現在のキャンペーン</h2>
                 <div class="campaign-grid">
-                    <!-- キャンペーン情報がここに動的に表示されます -->
+                    <!-- キャンペーン情報がここに動的に表示されます -->cd "/c/OneDrive/ドキュメント/Codes/GitHub Pages"
+                    git config --global core.editor "'C:/Users/yotub/AppData/Local/Programs/Windsurf/Windsurf.exe' --wait"
+                    git initcd "/c/OneDrive/ドキュメント/Codes/GitHub Pages"
+                    git config --global core.editor "'C:/Users/yotub/AppData/Local/Programs/Windsurf/Windsurf.exe' --wait"
+                    git initgit config --global core.editor "'C:/Users/yotub/AppData/Local/Programs/Windsurf/Windsurf.exe' --wait"
+                    git init<iframe 
+                        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSTahkzT1YibQh0xpdDVGZg5ZSuLsXRVzkPUxDCE-TNyN5_NJIBaLC4uUf8sJraIi-m1BDq69Iie3J1/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"
+                        class="spreadsheet-iframe"
+                        loading="lazy"
+                        frameborder="0"
+                        width="100%"
+                        height="600"
+                        style="background: white; border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);"
+                    ></iframe>
                 </div>
             </div>
         </section>
