--- a/index.html
+++ b/index.html
@@ -4,12 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ポイ活fun</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        :root {
+            --main-color: #F4A460;
+            --bg-color: #FFF8F0;
+            --text-color: #333333;
+        }
+        
+        body {
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            font-family: 'Hiragino Kaku Gothic Pro', 'メイリオ', sans-serif;
+        }
+
+        .navbar {
+            background-color: var(--main-color) !important;
+            padding: 1rem;
+        }
+
+        .navbar-brand {
+            color: white !important;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .section-title {
+            color: var(--text-color);
+            margin-bottom: 2rem;
+            font-weight: bold;
+            text-align: center;
+            padding: 1rem;
+        }
+
+        .content-section {
+            padding: 3rem 0;
+        }
+
+        .spreadsheet-content {
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 1rem;
+            margin: 1rem 0;
+        }
+
+        .spreadsheet-iframe {
+            border-radius: 12px;
+            background: white;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">ポイ活fun</a>
         </div>
@@ -25,14 +72,9 @@
         <section class="content-section" id="current-campaigns">
             <div class="container">
                 <h2 class="section-title" data-aos="fade-up">現在のキャンペーン</h2>
-                <div class="campaign-grid">
-                    <!-- キャンペーン情報がここに動的に表示されます -->cd "/c/OneDrive/ドキュメント/Codes/GitHub Pages"
-                    git config --global core.editor "'C:/Users/yotub/AppData/Local/Programs/Windsurf/Windsurf.exe' --wait"
-                    git initcd "/c/OneDrive/ドキュメント/Codes/GitHub Pages"
-                    git config --global core.editor "'C:/Users/yotub/AppData/Local/Programs/Windsurf/Windsurf.exe' --wait"
-                    git initgit config --global core.editor "'C:/Users/yotub/AppData/Local/Programs/Windsurf/Windsurf.exe' --wait"
-                    git init<iframe 
-                        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSTahkzT1YibQh0xpdDVGZg5ZSuLsXRVzkPUxDCE-TNyN5_NJIBaLC4uUf8sJraIi-m1BDq69Iie3J1/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"
+                <div id="spreadsheet-content" class="spreadsheet-content">
+                    <iframe 
+                        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSTahkzT1YibQh0xpdDVGZg5ZSuLsXRVzkPUxDCE-TNyN5_NJIBaLC4uUf8sJraIi-m1BDq69Iie3J1/pubhtml?gid=611794463&amp;single=true&amp;widget=true&amp;headers=false"
                         class="spreadsheet-iframe"
                         loading="lazy"
                         frameborder="0"
